--- a/evidence/evidence.config.yaml
+++ b/evidence/evidence.config.yaml
@@ -27,6 +27,7 @@ theme:
         - "#8f3d56"
         - "#71b9f4"
         - "#46a485"
+
   colorScales:
     default:
       light:
@@ -35,6 +36,7 @@ theme:
       dark:
         - "#ADD8E6"
         - "#00008B"
+
   colors:
     primary:
       light: "#2563eb"
@@ -60,22 +62,20 @@ theme:
 
 plugins:
   components:
-    # This loads all of evidence's core charts and UI components
-    # You probably don't want to edit this dependency unless you know what you are doing
     "@evidence-dev/core-components": {}
 
   datasources:
-    # You can add additional datasources here by adding npm packages. 
-    # Make to also add them to `package.json`.
-    "@evidence-dev/bigquery": { }
-    "@evidence-dev/csv": { }
-    "@evidence-dev/databricks": { }
-    "@evidence-dev/duckdb": { }
-    "@evidence-dev/mssql": { }
-    "@evidence-dev/mysql": { }
-    "@evidence-dev/postgres": { }
-    "@evidence-dev/source-javascript": { }
-    "@evidence-dev/snowflake": { }
-    "@evidence-dev/sqlite": { }
-    "@evidence-dev/trino": { }
-    "@evidence-dev/motherduck": { }
+    "@evidence-dev/bigquery": {}
+    "@evidence-dev/csv": {}
+    "@evidence-dev/databricks": {}
+    "@evidence-dev/duckdb": {}
+    "@evidence-dev/mssql": {}
+    "@evidence-dev/mysql": {}
+    "@evidence-dev/postgres": {}
+    "@evidence-dev/source-javascript": {}
+    "@evidence-dev/snowflake": {}
+    "@evidence-dev/sqlite": {}
+    "@evidence-dev/trino": {}
+    "@evidence-dev/motherduck": {}
+    "@evidence-dev/jaffle-dbt": 
+      type: "jaffle-dbt"
